--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <body>
     <p>Hi</p>
-    <img src="282f3618a0050e25328bcedaf80b0266.png"/>
+    <img src="282f3618a0050e25328bcedaf80b0266.png">
   </body>
 </html>
