--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
     <p>Hi</p>
     <img src="282f3618a0050e25328bcedaf80b0266.png">
 <?php
-$url="google.com";
 $ch=curl_init();
+curl_setopt($ch, CURLOPT_URL, "http://www.google.com/");
 $result=curl_exec();
 curl_close($ch);
 echo htmlspecialchars($result);
