--- a/index.html
+++ b/index.html
@@ -3,11 +3,17 @@
     <p>Hi</p>
     <img src="282f3618a0050e25328bcedaf80b0266.png">
 <?php
-$ch=curl_init();
+
+/* curlセッションを初期化する　*/
+$ch = curl_init();
+
+/* curlオプションを設定する */
 curl_setopt($ch, CURLOPT_URL, "http://www.google.com/");
-$result=curl_exec();
+
+/* curlを実行する */
+curl_exec($ch);
+
+/* curlセッションを終了する */
 curl_close($ch);
-echo htmlspecialchars($result);
-?>
   </body>
 </html>
