--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@ $url="https://api.search.nicovideo.jp/api/v2/snapshot/video/contents/search?q=%E
 curl_setopt($ch, CURLOPT_URL, $url);
 
 /* curlを実行する */
-curl_exec($ch);
+$result= curl_exec($ch);
 
 /* curlセッションを終了する */
 curl_close($ch);
+
+echo $result;
 ?>
 
   </body>
